# Intent-coding

./: .gitattributes  .gitignore  .security.env  .wslconfig  BOOTSTRAP_GUIDE.md  BUILD_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Dockerfile.ci  Dockerfile.parser  FAQ.md  FINAL_COMMIT_MESSAGE.md  Gemfile  LICENSE  LOCAL_CI_README.md  PUBLIC_REPO_STRUCTURE.md  QA_CHECKLIST.md  README.md  REALITY_CHECK.md  RELEASE_COMMIT_MESSAGE.md  RELEASE_NOTES_v0.1.0-alpha.md  SECURITY.md  SECURITY_REMEDIATION_PLAN.md  VERSION_CONTROL.md  Vibes.md  _config.yml  ai-sitemap.xml  audit_generator.py  bridge-check.sh  bridge.bat  ci-local.bat  ci-local.sh  ci-parser.sh  dev.bat  docker-compose.ci.yml  (+9 more)
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crucible-api/: Cargo.toml
crucible-api/src/: main.rs
crucible-codegen/: Cargo.toml
crucible-codegen/src/: lib.rs
crucible-core/: Cargo.toml
crucible-core/src/: lib.rs  main.rs
crucible-frontend/: Cargo.toml
crucible-frontend/src/: lib.rs
crucible-parser/: Cargo.toml  build.rs  grammar.js  test.req  z3_constraints.py
crucible-parser/src/: grammar.json  lib.rs  node-types.json  parser.c
crucible-verification/: Cargo.toml
crucible-verification/examples/: basic_verification.rs
crucible-verification/src/: lib.rs
docs/: ACCESSIBILITY.md  ACCESSIBILITY_FAQ.md  BRIDGE_TROUBLESHOOTING.md  C4_ARCHITECTURE.md  CHANGE_PROPOSAL_TEMPLATE.md  COMMIT_MESSAGE.md  DEVELOPMENT_SETUP.md  LLM_OPTIMIZATION_SPEC.md  MILSPEC_COMPLIANCE_STATUS.md  MILSPEC_DOCUMENTATION.md  MILSPEC_FRAMEWORK.md  PARSER_LOGIC.md  PRE_COMMIT_SAFETY.md  SECURITY_COMPLETE.md  SETUP_COMPLETE.md  STATUS.md  SURVIVAL_MANUAL.md  VERSION_REGISTRY.md  technical-qa.md
docs/active/: SDD_20260120.md  SECD_20260120.md  SRD_20260120.md  TPD_20260120.md
docs/cr/: CR-20260120-001.md
docs/templates/: change_request.md
frontend/: index.html
research/: PUBLICATIONS.md  references.bib  verifiable_proof_systems.tex
scripts/: gatekeeper.sh
templates/: audit_report_template.md
website/: deployment.md  digital-twin.html  digital-twin.js  index.html  worker.js
