[workspace]
members = [
    "crucible-core"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crucible Engine <abs224@users.noreply.github.com>"]
license = "CEEL-1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"