[workspace]
members = [
    "crucible-api",
    "crucible-codegen",
    "crucible-core",
    "crucible-frontend",
    "crucible-parser",
    "crucible-verification"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Crucible Engine <abs224@users.noreply.github.com>"]
license = "CEEL-1.0"
repository = "https://github.com/INTENT-coding/crucible-engine"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tree-sitter = "0.23"
thiserror = "2.0"
tracing = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
z3 = { version = "0.12", features = ["static-linking-z3"] }