[package]
name = "crucible-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly frontend components for Crucible Engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
crucible-core = { path = "../crucible-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window",
]