[package]
name = "crucible-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Natural language requirement parser using Tree-Sitter"

[dependencies]
crucible-core = { path = "../crucible-core" }
tree-sitter.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true